<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="parking"
            type="buu.informatics.s59161081.parking.Parking" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7C966"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/carImage"
        android:layout_width="228dp"
        android:layout_height="99dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/car" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/baloo_da"
        android:text="@string/app_name1"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carImage" />

    <TextView
        android:id="@+id/parking2Text"
        android:layout_width="121dp"
        android:layout_height="113dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorEmpty"
        android:fontFamily="@font/baloo_da"
        android:paddingLeft="@dimen/statusPaddingLeft"
        android:paddingTop="@dimen/statusPaddingTop"
        android:text="@string/available"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/parking3Text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/parking1Text"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/parking3Text"
        android:layout_width="121dp"
        android:layout_height="113dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorEmpty"
        android:fontFamily="@font/baloo_da"
        android:paddingLeft="@dimen/statusPaddingLeft"
        android:paddingTop="@dimen/statusPaddingTop"
        android:text="@string/available"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/parking2Text"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/parking1Text"
        android:layout_width="121dp"
        android:layout_height="113dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorEmpty"
        android:fontFamily="@font/baloo_da"
        android:paddingLeft="@dimen/statusPaddingLeft"
        android:paddingTop="@dimen/statusPaddingTop"
        android:text="@string/available"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/parking2Text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <EditText

        android:id="@+id/nameText"
        android:layout_width="265dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:fontFamily="@font/baloo_da"
        android:hint="@string/name"
        android:text="@={parking.name}"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/licenseText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parking2Text"/>



    <EditText
        android:id="@+id/brandText"
        android:layout_width="265dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:fontFamily="@font/baloo_da"
        android:hint="@string/brand"
        android:inputType="textPersonName"
        android:text="@={parking.brand}"
        app:layout_constraintBottom_toTopOf="@+id/updateButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/licenseText"/>



    <EditText
        android:id="@+id/licenseText"
        android:layout_width="265dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:fontFamily="@font/baloo_da"
        android:hint="@string/license"
        android:text="@={parking.license}"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/brandText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameText" />


    <Button
        android:id="@+id/updateButton"
        android:layout_width="167dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="248dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/background_light"
        android:fontFamily="@font/baloo_da"
        android:text="@string/update"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parking2Text"
        />


    <Button
        android:id="@+id/deleteButton"
        android:layout_width="167dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/background_light"
        android:fontFamily="@font/baloo_da"
        android:text="@string/delete"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/updateButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>